added scripts APIs and refactored forenten a little also improved interceptor
